--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -5,10 +5,10 @@ general {
 
 listener {
 	timeout = 150
-	on-timeout = /home/4g/screen_saver.sh
+	on-timeout = $HOME/.local/bin/screen_saver.sh
 }
 
-listenero {
+listener {
 	timeout = 151
 	on-timeout = loginctl lock-session
 	on-resume = pkill -f 'kitty.*--title __screensaver__:'
