--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -5,7 +5,7 @@ general {
 
 listener {
 	timeout = 150
-	on-timeout = $HOME/.local/bin/screen_saver.sh
+	on-timeout = $HOME/.local/bin/screen_saver
 }
 
 listener {
