--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -97,7 +97,7 @@ env = GBM_BACKEND,nvidia-drm
 env = MOZ_ENABLE_WAYLAND,1
 env = QT_QPA_PLATFORM,wayland
 env = GTK_USE_PORTAL,1
-env = GRIM_DEFAULT_DIR,$HOME/pictures/screenshots
+env = HYPRSHOT_DIR,$HOME/Pictures/screenshots
 
 #####################
 ### LOOK AND FEEL ###
@@ -264,7 +264,11 @@ bind = $mainMod, F, fullscreen,
 bind = $mainMod, P, pseudo, # dwindle
 #bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, S, exec, grim
+
+# Screencapture
+bind = $shiftMod, PRINT, exec, hyprshot -m window # Screenshot a window
+bind = $mainMod, PRINT, exec, hyprshot -m output # Screenshot a monitor
+bind = , PRINT, exec, hyprshot -m region # Screenshot a region
 
 # Move focus with mainMod + vim motions
 bind = $mainMod, H, movefocus, l
